# market_ml_system

./: .gitignore  Dockerfile  Makefile  README.md  mlflow.db  pyproject.toml
.github/workflows/: ci.yml
configs/: train.yaml  train_champion.yaml  train_event_classifier.yaml  train_event_classifier_hybrid_gmm.yaml  train_event_classifier_optimal.yaml  train_event_classifier_topk2.yaml  train_oscillator_champion.yaml  train_price_only.yaml  train_price_only_tech_v1.yaml  train_price_only_topk.yaml  train_price_volume.yaml  train_price_volume_gmm.yaml  train_signal_lab_v1.yaml
configs/sweeps/: event_cls_all_packs_gmm.yaml  event_cls_all_packs_hmm.yaml  event_cls_compression_gmm.yaml  event_cls_compression_hmm.yaml  event_cls_market_context_gmm.yaml  event_cls_market_context_hmm.yaml  event_cls_range_position_gmm.yaml  event_cls_range_position_hmm.yaml  event_cls_trend_quality_gmm.yaml  event_cls_trend_quality_hmm.yaml  event_cls_volume_regime_gmm.yaml  event_cls_volume_regime_hmm.yaml  event_opt_screen_add_trend_quality.yaml  event_opt_screen_add_volume_and_trend.yaml  event_opt_screen_add_volume_regime.yaml  event_opt_screen_baseline.yaml  event_opt_screen_deeper_boost.yaml  event_opt_screen_fine_threshold.yaml  event_opt_screen_regularized.yaml  event_opt_screen_topk2.yaml  price_only_topk1_h10.yaml  (+25 more)
market_ml_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: download_raw_data.ipynb  eda.ipynb  tickers.py
scripts/: download_raw_data.py  run_inference.py  run_train.py  tickers.py
tests/: test_targets_and_classification.py  test_walk_forward.py
(+247 files in other folders)
