[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-ml-system"
version = "0.1.0"
description = "Elite ML systems repo for market state learning, prediction, backtesting, and serving"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "lightgbm>=4.5",
    "pyyaml>=6.0.2",
    "joblib>=1.4",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "mlflow>=2.16",
    "python-dotenv>=1.0",
    "pyarrow>=17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
    "mypy>=1.11",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]